syntax = "proto3";

package PrimeAPI;

message PrimeRequest {
	int32 Number = 1;
}

message PrimeResponse {
	int32 Decomposition = 1;
}

service PrimeService {
	rpc Decompose (PrimeRequest) returns (stream PrimeResponse) {}
} 

